# apriltag_detector_android

./: README.md  settings.gradle
AprilTagDetector/app/src/main/: AndroidManifest.xml
AprilTagDetector/app/src/main/java/com/detection/: CameraFragment.kt
AprilTagDetector/app/src/main/res/values/: strings.xml
AprilTagDetector/apriltagdetection/src/main/apriltag/: apriltag.c  apriltag_jni.c  tagCustom48h12.c  tagCustom48h12_6_10.h  tagCustom48h12_6k_12k.c  tagCustom48h12_6k_12k.h
AprilTagDetector/apriltagdetection/src/main/apriltag/common/: getopt.c  time_util.c
AprilTagDetector/apriltagdetection/src/main/res/layout/: fragment_preview.xml  fragment_testing.xml
SplitBill/: build.gradle
SplitBill/app/: build.gradle  google-services.json
SplitBill/app/src/androidTest/java/com/splitbill/: ExampleInstrumentedTest.java
SplitBill/app/src/main/: AndroidManifest.xml
SplitBill/app/src/main/res/layout/: activity_login.xml  app_bar_main.xml  content_main.xml  fragment_add_group.xml
SplitBill/app/src/main/res/values/: strings.xml
app/: build.gradle
app/src/main/java/com/detection/: MainActivity.kt
app/src/main/res/layout/: fragment_camera.xml
apriltagdetection/: build.gradle
apriltagdetection/src/main/: AndroidManifest.xml
apriltagdetection/src/main/apriltag/: CMakeLists.txt  apriltag_opencv.cpp  tagCustom48h12_6_10.c
apriltagdetection/src/main/apriltag/common/: homography.c  matd.c  pjpeg.c
apriltagdetection/src/main/apriltag/example/: opencv_demo.cc
apriltagdetection/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+16 files in other folders)
